udpate readme.md

--- a/src/index.less
+++ b/src/index.less
@@ -344,7 +344,7 @@ body {
           position: absolute;
           font-size: .4rem;
           line-height: 2.2;
-          right: 0;
+          left: 0;
           top: 0;
           opacity: 0;
           cursor: pointer;
@@ -360,9 +360,10 @@ body {
           overflow: hidden;
           text-overflow: ellipsis;
           white-space: nowrap;
-          padding-top: 0.14rem;
-          padding-bottom: 0.14rem;
-          padding-right: 0.1rem;
+          line-height: 1rem;
+          // padding-top: 0.14rem;
+          // padding-bottom: 0.14rem;
+          // padding-right: 0.1rem;
         }
       }
     }
