update modify the css class for salesAnalysis

--- a/src/index.less
+++ b/src/index.less
@@ -378,6 +378,7 @@ body {
   .fee-detail {
     padding: 20px;
     padding-top: 0;
+    font-size: .5rem;
 
     table {
       width: 100%;
@@ -396,6 +397,15 @@ body {
       .title {
         font-weight: 400;
         background: #92e6e6;
+        padding: 0 15px;
+
+        &.t-l {
+          text-align: left;
+        }
+
+        &.t-r {
+          text-align: right;
+        }
       }
 
       .total {
@@ -410,10 +420,11 @@ body {
 
   .road-show {
     padding: 20px;
+    font-size: .5rem;
 
     header {
       text-align: center;
-      font-size: 30px;
+      font-size: .6rem;
       font-weight: bold;
       padding-bottom: 20px;
     }
