feature:add historical points

--- a/src/index.less
+++ b/src/index.less
@@ -106,6 +106,12 @@ body {
       }
     }
   }
+
+  .historical-point__card {
+    .am-card-header {
+      background: #f7f7f7;
+    }
+  }
 }
 
 .upd-commission-file {
